# text-based-game-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt
src/: main.cpp
src/main/cpp/: main.cpp
src/main/cpp/TextGame/: GameSelector.cpp  GameSelector.h  GameTypeEnum.h  TextGame.cpp  TextGame.h  TextGameBuilder.cpp  TextGameBuilder.h  TextGameEngine.cpp  TextGameEngine.h
src/main/cpp/Utilities/: Menu.h  PrintUtilities.h
